@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2018-04-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/dpx.c (ReadDPXImage): Move misplaced channel validation
+code.  Fixes oss-fuzz 8041 &quot;graphicsmagick/coder_DPX_fuzzer:
+Use-of-uninitialized-value in WriteDPXImage&quot; and oss-fuzz 8055
+&quot;graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
+EnhanceImage&quot;. (Credit to OSS-Fuzz)</li>
+</ul>
+</blockquote>
 <p>2018-04-27  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
