@@ -1,3 +1,11 @@
+2018-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/dpx.c (ReadDPXImage): Move misplaced channel validation
+	code.  Fixes oss-fuzz 8041 "graphicsmagick/coder_DPX_fuzzer:
+	Use-of-uninitialized-value in WriteDPXImage" and oss-fuzz 8055
+	"graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
+	EnhanceImage". (Credit to OSS-Fuzz)
+
 2018-04-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/xpm.c (StringToListMod): Algorithm fixes to fix use of
